--- a/overrides/partials/comments.html
+++ b/overrides/partials/comments.html
@@ -1,6 +1,6 @@
 {% if page.meta.comments is not defined or page.meta.comments != false %}
 <!-- Insert generated snippet here -->
-<script src="https://giscus.app/client.js" data-repo="KinnariyaMamaTanha/KinnariyaMamaTanha.github.io"
+<script src="https://giscus.app/client.js" data-repo="tom-jerr/tom-jerr.github.io"
     data-repo-id="R_kgDONZrjcA" data-category="Announcements" data-category-id="DIC_kwDONZrjcM4Ck-PT"
     data-mapping="title" data-strict="0" data-reactions-enabled="1" data-emit-metadata="1" data-input-position="top"
     data-theme="preferred_color_scheme" data-lang="en" data-loading="lazy" crossorigin="anonymous" async>
